# 6_832_project_segway

./: main.py  obstacle.py  readme.md  segway.py  trajectory_optimization.py  visualizer.py  world.py
model/: CMakeLists.txt  package.xml
model/config/: joint_names_urdf.yaml  model.rviz
model/launch/: display.launch
model/meshes/: rod.STL  wheel_base.STL
model/scripts/: visualization.py
model/urdf/: urdf.csv  urdf.urdf
trajectory_opt/: CMakeLists.txt  package.xml  trajectory_optimization.py  visualizer.py  world.py
