<package format="2">
  <name>model</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for urdf</p>
    <p>This package contains configuration data, 3D models and launch files
for urdf robot</p>
  </description>
  <author>Qian Lin</author>
  <maintainer email="qzlinqian@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <depend>rospy</depend>
  <export>
    <architecture_independent />
  </export>
</package>
